@@ -71,7 +71,7 @@ G_BEGIN_DECLS
 /* Client information for Twitter servers */
 #define TWITUX_HEADER_URL                     "http://twitux.sourceforge.net/client.xml"
 
-/* Auto update timeout */
+/* Auto update timeout (3min) */
 #define TWITUX_TIMEOUT                        180000
 
 /* ListStore columns */
